E35/src/cool-store-compose/kube-artifacts/catalog/catalog-coolstore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 2
  labels:
    app: catalog
    app.kubernetes.io/component: catalog
    app.kubernetes.io/instance: catalog
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: coolstore
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-ubi8
  name: catalog
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: catalog
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: catalog
        deploymentconfig: catalog
    spec:
      containers:
      - image: quay.io/jchraibi/catalog-coolstore:latest
        imagePullPolicy: Always
        name: catalog
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
